tests/parser-test-files/bad-files/parse-and.1.error
error: Malformed and expression
  --> test:4:14
   |
 4 |  (define x (and))
   |                ^ expected one or more arguments
